err/agora-stoa-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Agora_Client-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/Agora_Stoa_Client-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/agora'...
Listing './lib/python3.5/site-packages/agora/client'...
Listing './lib/python3.5/site-packages/agora/stoa'...
Listing './lib/python3.5/site-packages/agora/stoa/client'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Listing './lib/python3.5/site-packages/pika-0.11.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.2.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
